api tests set up added